--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -100,7 +101,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -196,7 +197,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -266,7 +268,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -297,7 +299,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -323,7 +326,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -441,9 +444,8 @@
         <!-- banner section Start -->
 
         <div class="banner-section">
-            <h1>Custom <span> Mobile App </span> Development Solutions for your Business Success </h1>
-            <p>Over the years, the question has changed from why cloud to which cloud? Whether from an on-premises
-                server to Cloud or Cloud to Cloud.</p>
+            <h1>Our knowledgeable and <span> well-trained in-house support team</span> is always ready to help you to be successful.</h1>
+            <p> Contact us for enchanting ideas and suggestions for your business designs. </p>
             <div class="banner-flex">
                 <a href="contact.html" class="btn">
                     <span class="btn-1"></span>
@@ -485,7 +487,7 @@
                     <span>Address (TN Branch)</span>
                 </div>
                 <div class="contact-address-number">
-                    <a href="#">No-204 A, A.K.G Complex, New Sidhapudur, Coimbatore-641044</a>
+                    <a href="https://maps.app.goo.gl/i8SoD3EGLszm2Rby7">No-204 A, A.K.G Complex, New Sidhapudur, Coimbatore-641044</a>
                 </div>
             </div>
             <div class="contact-address-boxs">
@@ -494,8 +496,8 @@
                     <span>Mobile Number</span>
                 </div>
                 <div class="contact-address-number">
-                    <a href="#">+91 98765 43210</a> <br>
-                    <a href="#">+91 98765 43210</a>
+                    <a href="tel:+919884565567">+91 98845 65567</a> <br>
+                    <a href="tel:+917538857567">+91 75388 57567</a>
                 </div>
             </div>
             <div class="contact-address-boxs">
@@ -504,7 +506,7 @@
                     <span>Address (TN Branch)</span>
                 </div>
                 <div class="contact-address-number">
-                    <a href="#">support@iqtechway.com</a>
+                    <a href="mailto:info@iqtechway.com">info@iqtechway.com</a>
                 </div>
             </div>
             <div class="contact-address-boxs">
@@ -529,27 +531,27 @@
 
             <div class="consultant-form">
                 <h2>Talk to <span>Consultant</span> </h2>
-                <p>Get Complete Business Analysis Report From Our Experts Now!</p>
+                <p>Help us improve by forwarding your valuable feedback. You can submit your suggestions here and help us grow.</p>
                 <form action="contact()" method="POST">
 
                     <div class="consultant-boxs">
                         <div class="consultant-mini">
                             <input type="text" id="name" required>
-                            <label for="">Your Name</label>
+                            <label for="name">Your Name</label>
                         </div>
                         <div class="consultant-mini">
                             <input type="number" id="number" required>
-                            <label for="">Your Number</label>
+                            <label for="number">Your Number</label>
                         </div>
 
                     </div>
                     <div class="consultant-min">
                         <input type="text" id="email" required>
-                        <label for="">Your Email</label>
+                        <label for="email">Your Email</label>
                     </div>
                     <div class="consultant-min">
                         <textarea name="" id="message" cols="30" rows="5" required></textarea>
-                        <label for="">Message</label>
+                        <label for="message">Message</label>
                     </div>
 
                     <button class="btn" onclick="contact()">
