--- a/frontend.html
+++ b/frontend.html
@@ -75,7 +75,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -101,7 +102,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -197,7 +198,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -267,7 +269,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -298,7 +300,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -324,7 +327,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -465,7 +468,7 @@
 
     <div class="research-title mb-5">
         <h2>Frontend <span>Development</span> </h2>
-        <p>At IQ Techway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
+        <p>At iQtechway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
     </div>
 
 
@@ -475,7 +478,7 @@
         <div class="our-solutions-container container">
             <div class="our-solutions-content">
                 <h2>Welcome to IQ Techway: <span>Transforming Ideas into Exceptional Frontend Experiences</span> </h2>
-                <p>At IQ Techway, we specialize in crafting captivating frontend solutions that elevate user experiences
+                <p>At iQtechway, we specialize in crafting captivating frontend solutions that elevate user experiences
                     to new heights. With a team of seasoned developers, designers, and innovators, we transform your
                     visions into stunning, intuitive interfaces that captivate audiences and drive success.</p>
 
@@ -699,7 +702,7 @@
         <div class="industries-container-1 container">
             <div class="industries-title">
                 <h2>Website design services <span> we offer</span></h2>
-                <p>At IQ Techway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
+                <p>At iQtechway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
                 <div class="industries-title-overlay"></div>
             </div>
             <div class="industries-box-container-1">
@@ -894,7 +897,7 @@
                 <div class="research-content-boxs">
                     <h5>HIGH-SCALABLE APPS
                     </h5>
-                    <p>With IQ Techway research & development services, you will be able to test your innovative
+                    <p>With iQtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -1099,11 +1102,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                    <span> Why choose iQtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
+                    iQtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
