--- a/join-team.html
+++ b/join-team.html
@@ -74,7 +74,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -100,7 +101,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -196,7 +197,7 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                        <a href="join-team.html" class="accordion-button collapsed">Career</a>
 
                     </div>
 
@@ -266,7 +267,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -297,7 +298,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -323,7 +325,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -401,7 +403,7 @@
 
         <!-- Header Section Start -->
         <!-- Navbar Section Start -->
-       <nav class="navbar">
+        <nav class="navbar">
             <div class="navbar-container container">
                 <a href="index.html" class="nav-brand">
                     <img src="assets/Images/logo/iq-white.png" class="png-white" alt="LOGO">
@@ -439,11 +441,11 @@
         <!-- banner section Start -->
 
         <div class="banner-section">
-            <span class="since">Since 2019</span>
-            <h1>Join Our<span> Team</span></h1>
-            <p>High Quality Web & Mobile Application Design & Development Solution, that will help you to achieve new
-                heights in your business.
-            </p>
+            <span class="since">Since 2015</span>
+            <h1>Explore Life at <span> iqtechway</span></h1>
+            <p>Welcome to a world of opportunities at iqtechway. At iqtechway we nurture the entrepreneurial spirit and
+                allow you to treat your job as if it was your own business and to help you do that we have created an
+                excellent work culture which is informal, non-political and transparent.</p>
             <span class="del"><a href="index.html">Home </a> > Join our team</span>
 
         </div>
@@ -460,7 +462,9 @@
         <div class="join-team-container container">
             <div class="join-team-title mb-5 text-center">
                 <h2>Current <span>Openings</span> </h2>
-                <p>Are you seeking a dynamic work environment that fosters innovation and encourages growth? Look no further than IQ Techway! As a leading tech company dedicated to pushing boundaries and redefining possibilities, we're on the lookout for talented individuals to join our team.</p>
+                <p>We at iqtechway, are on the lookout for fresh energetic talent and are eager to open new doors to
+                    shape your career in the best way in the IT Sector. We wish to incorporate innovative,
+                    passion-driven, young and dynamic minds into our team.</p>
             </div>
             <div class="join-team-pills">
                 <ul class="nav nav-pills d-flex justify-content-center gap-3 flex-wrap mb-3" id="pills-tab"
@@ -681,51 +685,92 @@
 
 
 
+    <!--////////////////////////////////// milestones section Start //////////////////////////////// -->
 
-
-    <!--/////////////////////////// Technologies End ///////////////////////-->
-
-    <div class="faq-details container">
-        <h2>Frequently <span>Asked Questions</span> </h2>
-        <div class="question-container">
-            <div class="question">
-                <button id="button">
-                    <span>1. What material or Content do you need to create a website?</span>
-                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
-                </button>
-                <p>
-                    Your logo, pictures of your goods or services, and information about your company are all that are
-                    required to establish a website. You can also use the other resources you have, such as videos,
-                    price lists, pamphlets, and ebooks.44
-                </p>
+    <section class="milestones-section1 reveal">
+        <div class="milestones-overlay1"></div>
+        <div class="minlestone-container1 container">
+            <div class="milestone-details1">
+                <div class="milestone-content1">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    <span class="counts" data-val="5+">0</span>
+                    <span class="counts-name">Years of Experience</span>
+                </div>
+                <div class="milestone-content1">
+                    <i class="fa-solid fa-person-falling-burst"></i>
+                    <span class="counts" data-val="600">0</span>
+                    <span class="counts-name">No of Projects</span>
+                </div>
+                <div class="milestone-content1">
+                    <i class="fa-solid fa-bottle-droplet"></i>
+                    <span class="counts" data-val="250">0</span>
+                    <span class="counts-name">No of Clients</span>
+                </div>
+                <div class="milestone-content1">
+                    <i class="fa-solid fa-handshake"></i>
+                    <span class="counts" data-val="3">0</span>
+                    <span class="counts-name">Partnership</span>
+                </div>
             </div>
-            <div class="question">
-                <button id="button">
-                    <span> 2. What type of website is accurate for me? </span>
-                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
-                </button>
-                <p>
-                    Your company will determine the best type of website for you. Obtain a complimentary consultation to
-                    determine which website is most appropriate for you. </p>
-            </div>
-            <div class="question">
-                <button id="button">
-                    <span>
-
-                        3. How quickly can you create my site? </span>
-                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
-                </button>
-                <p> It is feasible to build a website in just one day; yes, we can work quickly and deliver in
-                    accordance with your business requirements. Depending on the type selected, we send the sites in 5
-                    to 10 days on average. </p>
-            </div>
-
         </div>
 
+    </section>
 
-    </div>
+    <!--////////////////////////////////// milestones section End //////////////////////////////// -->
 
-    <!-- FAQ End  -->
+    <!-- Achieve New Goals Start -->
+
+    <section class="achieve-section">
+        <div class="achieve-container container">
+            <div class="achieve-title">
+                <h2>Achieve New Goals In Your Career</h2>
+                <p>Work within a healthy working environment with a very supportive team of excellent programmers,
+                    developers, architects, salespersons, testers, designers, and managers at Next Big Technology.</p>
+            </div>
+            <div class="achieve-content-container">
+                <div class="achieve-boxs">
+                    <div class="achieve-box-content abc-1">
+                        <div class="achieve-overlay"></div>
+                        <img src="assets/Images/Career/supportive.jpg" alt="career">
+                        <h5>Supportive Team</h5>
+                    </div>
+                    <div class="achieve-box-content abc-2">
+                        <div class="achieve-overlay"></div>
+                        <img src="assets/Images/Career/inovative.jpg" alt="career">
+                        <h5>Innovation & Creativity</h5>
+                    </div>
+                </div>
+                <div class="achieve-boxs">
+                    <div class="achieve-box-content abc-3">
+                        <div class="achieve-overlay"></div>
+                        <img src="assets/Images/Career/intership.jpg" alt="career">
+                        <h5>Training & Internship</h5>
+                    </div>
+                    <div class="achieve-box-content abc-4">
+                        <div class="achieve-overlay"></div>
+                        <img src="assets/Images/Career/career.jpg" alt="career">
+                        <h5>Career Growth</h5>
+                    </div>
+                </div>
+                <div class="achieve-boxs">
+                    <div class="achieve-box-content  abc-5">
+                        <div class="achieve-overlay"></div>
+                        <img src="assets/Images/Career/decipline.jpg" alt="career">
+                        <h5>Decipline & Transparency</h5>
+                    </div>
+                    <div class="achieve-box-content abc-6">
+                        <div class="achieve-overlay"></div>
+                        <img src="assets/Images/Career/facebook.jpg" alt="career">
+                        <h5>Recognition & Feedback</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Achieve New Goals End -->
+
+
 
 
     <!-- Testimonial Section STart -->
@@ -764,6 +809,8 @@
     </section>
 
     <!-- Testimonial Section End -->
+
+
 
 
 
@@ -844,7 +891,7 @@
 
 
     <!--/////////////////////////// footer section start/////////////////////// -->
-     <footer>
+    <footer>
         <div class="footer-boxes">
             <div class="footer-first">
                 <h5>Get in Touch</h5>
@@ -1050,59 +1097,59 @@
         })(window, document, "static.olark.com/jsclient/loader.js");/* custom configuration goes here (www.olark.com/documentation) */olark.identify('9134-624-10-9995');</script>
     <!-- end olark code -->
 
- <!-- Mobile Responsive Social Icons Start -->
+    <!-- Mobile Responsive Social Icons Start -->
 
- <section class="mobile-social-icons">
-    <div class="mobile-social-container">
-        <div id="mobileToggler" class="mobile-social-toggler">
-            <span>
-                <i class="fa-solid fa-address-book fa-shake"></i>
-            </span>
-        </div>
-        <div class="mobile-toggler-menus">
-            <div class="mobile-menus-container">
-                <span style="--i:1;--bac:rgb(0, 81, 255);">
-                    <a href="tel:+917538857567" target="_blank" class="social-links">
-                        <i class="fa-solid fa-phone"></i>
-                    </a>
-                </span>
-                <span style="--i:2;--bac:green;">
-                    <a href="https://wa.me/+917538857567" target="_blank" class="social-links">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a>
-                </span>
-                <span style="--i:3;--bac:rgb(74, 204, 255);">
-                    <a href="#" target="_blank" class="social-links">
-                        <i class="fa-brands fa-skype"></i>
-                    </a>
-                </span>
-                <span style="--i:4;--bac:rgb(0, 81, 255);">
-                    <a href="mailto:info@iqtechway.com" target="_blank" class="social-links">
-                        <i class="fa-solid fa-envelope"></i>
-                    </a>
+    <section class="mobile-social-icons">
+        <div class="mobile-social-container">
+            <div id="mobileToggler" class="mobile-social-toggler">
+                <span>
+                    <i class="fa-solid fa-address-book fa-shake"></i>
                 </span>
             </div>
+            <div class="mobile-toggler-menus">
+                <div class="mobile-menus-container">
+                    <span style="--i:1;--bac:rgb(0, 81, 255);">
+                        <a href="tel:+917538857567" target="_blank" class="social-links">
+                            <i class="fa-solid fa-phone"></i>
+                        </a>
+                    </span>
+                    <span style="--i:2;--bac:green;">
+                        <a href="https://wa.me/+917538857567" target="_blank" class="social-links">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                    </span>
+                    <span style="--i:3;--bac:rgb(74, 204, 255);">
+                        <a href="#" target="_blank" class="social-links">
+                            <i class="fa-brands fa-skype"></i>
+                        </a>
+                    </span>
+                    <span style="--i:4;--bac:rgb(0, 81, 255);">
+                        <a href="mailto:info@iqtechway.com" target="_blank" class="social-links">
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                    </span>
+                </div>
 
+            </div>
         </div>
-    </div>
 
-    <script>
-        // Mobile Menus Teggler 
+        <script>
+            // Mobile Menus Teggler 
 
-        let mobileToggler = document.querySelector('.mobile-social-toggler');
-        let mobileTogglerMenus = document.querySelector('.mobile-toggler-menus');
+            let mobileToggler = document.querySelector('.mobile-social-toggler');
+            let mobileTogglerMenus = document.querySelector('.mobile-toggler-menus');
 
-        mobileToggler.addEventListener('click', () => {
-            mobileTogglerMenus.classList.toggle('mobResponsive');
-            mobileToggler.classList.toggle('ro45');
-        });
-
+            mobileToggler.addEventListener('click', () => {
+                mobileTogglerMenus.classList.toggle('mobResponsive');
+                mobileToggler.classList.toggle('ro45');
+            });
 
 
-    </script>
-</section>
 
-<!-- Mobile Responsive Social Icons End -->
+        </script>
+    </section>
+
+    <!-- Mobile Responsive Social Icons End -->
 
 
 
