--- a/lead-management.html
+++ b/lead-management.html
@@ -73,7 +73,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -99,7 +100,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -195,7 +196,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -265,7 +267,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -296,7 +298,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -322,7 +325,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -647,9 +650,9 @@
             <h2>Guaranteed SEO Results 100% Reputed as the <span>Best Tamilnadu SEO Company</span> </h2>
             <p>Top Page Organic Listing or earned Media Drives Traffic and Inspires Trust & Confidence among consumers
                 highlighting the importance the company has gained through popular merit</p>
-            <p>We at Techasoft, the leading provider of SEO Services in Tamilnadu believe - SEO is the understanding of
+            <p>We at iQtechway, the leading provider of SEO Services in Tamilnadu believe - SEO is the understanding of
                 search engine technology, our SEO experts study search patterns by people and clearly define the target
-                audience and their search terms. Techasoft SEO specialists provide the following services:</p>
+                audience and their search terms. iQtechway SEO specialists provide the following services:</p>
 
             <div class="guaranteed-list">
                 <ul>
@@ -1001,11 +1004,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                    <span> Why choose iQtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
+                    iQtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
