--- a/pwa.html
+++ b/pwa.html
@@ -74,7 +74,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -100,7 +101,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -196,7 +197,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -263,7 +265,7 @@
                                 <li><a class="dropdown-item" href="hire-wordpress-developer.html">Hire Wordpress Developer</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -294,7 +296,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -320,7 +323,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -459,7 +462,7 @@
 
     <div class="research-title mb-5">
         <h2><span>Progressive Web</span> App Service </h2>
-        <p>At IQ Techway, we redefine digital experiences through cutting-edge technology, and our specialty lies in crafting Progressive Web Apps (PWAs) that transform the way users engage with your brand.</p>
+        <p>At iQtechway, we redefine digital experiences through cutting-edge technology, and our specialty lies in crafting Progressive Web Apps (PWAs) that transform the way users engage with your brand.</p>
     </div>
 
 
@@ -682,7 +685,7 @@
                 is this infrastructure that makes us the best <a href="#">iPhone app development company in India.</a>
             </p>
 
-            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>IQ Techway </a> , an
+            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>iQtechway </a> , an
                 <a href="#">Progressive Web app development company in India</a> caters to a plethora of demands and app
                 flavors,
                 and dimensions, irrespective of industry verticals or end-use.
@@ -697,7 +700,7 @@
     <section class="next-big-tech1">
         <div class="next-big-title1 container">
             <h2>Development <span>Process </span> </h2>
-            <p>A reliable android application development company, IQ Tech supervises the entire development process to
+            <p>A reliable android application development company, iQtechway supervises the entire development process to
                 attain client satisfaction. The method includes research, design, development, management, security,
                 testing, fixing, and publishing the application. This is followed by the post-deployment services, which
                 include; bug fixing, updates, and modifications as per demand at the best price.</p>
@@ -730,7 +733,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>SMALL SIZE</h5>
-                    <p>With IQ Techway research & development services, you will be able to test your innovative
+                    <p>With iQtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -930,11 +933,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                    <span> Why choose iQtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
+                    iQtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
