--- a/seo-copy-writing.html
+++ b/seo-copy-writing.html
@@ -72,7 +72,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -98,7 +99,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -194,7 +195,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -261,7 +263,7 @@
                                 <li><a class="dropdown-item" href="hire-wordpress-developer.html">Hire Wordpress Developer</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -292,7 +294,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -318,7 +321,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -438,7 +441,7 @@
         <div class="banner-section">
             <span class="since">Since 2019</span>
             <h1 class="mb-3"><span>SEO Copy Writing </span> Management</h1>
-            <p class="mb-3">Within a short span of 10+ years, IQ Tech has emerged as one of the topmost authentic
+            <p class="mb-3">Within a short span of 10+ years, iQtechway has emerged as one of the topmost authentic
                 SEO SERVICES Development Companies in the world delivering solid groundbreaking solutions & services.
             </p>
             <img src="assets/Images/testimonial/client-img.png" alt="Banner-testimonial">
@@ -453,7 +456,7 @@
 
     <div class="research-title mb-5">
         <h2>SEO Copy Writing <span> Management</span> </h2>
-        <p>At IQ Techway, we specialize in propelling businesses to the forefront of online success through our cutting-edge SEO copywriting management solutions. </p>
+        <p>At iQtechway, we specialize in propelling businesses to the forefront of online success through our cutting-edge SEO copywriting management solutions. </p>
     </div>
 
     <section class="our-solutions-section ">
@@ -463,7 +466,7 @@
             <div class="our-solutions-content">
                 <h2>CONTENT WRITING COMPANY  <span>IN TAMILNADU</span> </h2>
                 <p>Content, when finely brewed like coffee, can get folks addicted to your business website, products and services. A catchy and creative web content can do wonders to expand your business online. Content writing undeniably, a powerful tool your business can use to keep its public face lively and attractive. Of the millions of web content available on the net; blog posts, articles and Ad copies that are being created, some get noticed better than the rest. Have you ever thought why? Nothing else but content writing does the magic! Words spell wonders owing to the fact that words are meant to spell wonders. You don’t have to get your grey hair worrying over whether you communicated your business smoothly because we are there at your service to take care of your business by communicating to the right person in the perfect tone.</p>
-                <p>Whether you need Content Writers for your newbie website or Content Editors to redesign your already existing website, Techasoft is there to fulfill all your content requirements. Our dedicated team consists of well-qualified and experienced content writers, researchers and editors. We help you create top ranked SEO web content, catchy slogans, sales-pulling brochures, attractive Ad copies, stunning case studies and other many more through our budget friendly SEO Copywriting services. You name what you need and we'll be there next second to provide you with it.</p>
+                <p>Whether you need Content Writers for your newbie website or Content Editors to redesign your already existing website, iQtechway is there to fulfill all your content requirements. Our dedicated team consists of well-qualified and experienced content writers, researchers and editors. We help you create top ranked SEO web content, catchy slogans, sales-pulling brochures, attractive Ad copies, stunning case studies and other many more through our budget friendly SEO Copywriting services. You name what you need and we'll be there next second to provide you with it.</p>
 
                 <h2>4 Reasons why you should  <span>choose IQ Techway?</span></h2>
 
@@ -751,11 +754,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                    <span> Why choose iQtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
+                    iQtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
