--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -75,7 +75,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -101,7 +102,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -197,7 +198,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -264,7 +266,7 @@
                                 <li><a class="dropdown-item" href="hire-wordpress-developer.html">Hire Wordpress Developer</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -295,7 +297,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -321,7 +324,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -454,7 +457,7 @@
 
     <div class="research-title mb-5">
         <h2>Social Media Marketing  <span>development Company</span> </h2>
-        <p>Welcome to IQ Techway, where technology meets creativity and innovation finds its platform. As a pioneering force in the digital sphere, we specialize in leveraging the power of social media to propel businesses to new heights.</p>
+        <p>Welcome to iQtechway, where technology meets creativity and innovation finds its platform. As a pioneering force in the digital sphere, we specialize in leveraging the power of social media to propel businesses to new heights.</p>
     </div>
 
     
@@ -470,7 +473,7 @@
                 <h2>Looking for SEO Services <span>in India ?</span></h2>
 
                 <p>If you have a website yet its span is past the focused audiences at that point, so you are missing
-                    out on your business and focused targets. We at IQ Techway, help you to be found on the internet and
+                    out on your business and focused targets. We at iQtechway, help you to be found on the internet and
                     hence, make the best of your business. We offer the best SEO services in Tamilnadu. Our SEO experts
                     work alongside the Digital Marketing specialists to make your brand value higher with proper
                     planning and analysis. We have helped various brands and businesses to rank higher in different
@@ -633,14 +636,14 @@
             <p>Social media marketing, or SMM, is a form of internet marketing that involves creating and sharing content on social media networks to attain your marketing and branding goals. SMM is based on the principle of organic search, which basically implies that when the website or its connected social network page is a lot of active, the website’s position on search engines rises, i.e. it'll be seen in the first few results. Although the terms e-marketing and digital marketing are still predominant in academia. Most social media platforms have built-in data analytics tools, which enable companies to track the advancement, progress, and engagement of ad campaigns. Companies address a range of stakeholders through social media marketing, including current and dormant clients, current and potential employees, journalists, bloggers, and the general public. On a diplomatic level, social media marketing includes the management of a marketing campaign, governance, setting the scope (e.g. more active or passive use) and the legacy of a firm's desired social media "culture" and "tone."</p>
 
 
-            <p>IQ Techway Private Limited is a Social Media Marketing Company in Tamilnadu, Which is known for its premium services in Whole tamilnadu Region. It is one of the topmost Social Media Marketing Company in Tamilnadu which provides all the prominent Services including Digital Marketing, Web Development and Much More. The Social Media Marketing Company helps you to gain the traffic on your website with the help of Facebook, Google+, Twitter, LinkedIn, Tumblr, YouTube, Pinterest, and Instagram etc.</p>
+            <p>iQtechway Private Limited is a Social Media Marketing Company in Tamilnadu, Which is known for its premium services in Whole tamilnadu Region. It is one of the topmost Social Media Marketing Company in Tamilnadu which provides all the prominent Services including Digital Marketing, Web Development and Much More. The Social Media Marketing Company helps you to gain the traffic on your website with the help of Facebook, Google+, Twitter, LinkedIn, Tumblr, YouTube, Pinterest, and Instagram etc.</p>
 
-            <p>At IQ Techway Private Limited there is a team of professionals who are always dedicated and focused towards your business. Having this type of skilled, professional and experienced team with us, we can provide you with all your requirements at a very cost-effective price, that too the on-time services, we understand your needs and perfectly strategize advertisement for your product. IQ Techway always plans in a way that ultimately increases the traffic at your website and increases your brand awareness across the globe. We offer great services at affordable prices with 100% satisfaction guaranteed. Easy and fast payment options. At IQ Techway you will get fully customizable advertising strategy according to your need, company, and product. We are one of the leading service providers in this field with a history of 200+ successful projects and on time delivery expertise.</p>
+            <p>At iQtechway Private Limited there is a team of professionals who are always dedicated and focused towards your business. Having this type of skilled, professional and experienced team with us, we can provide you with all your requirements at a very cost-effective price, that too the on-time services, we understand your needs and perfectly strategize advertisement for your product. iQtechway always plans in a way that ultimately increases the traffic at your website and increases your brand awareness across the globe. We offer great services at affordable prices with 100% satisfaction guaranteed. Easy and fast payment options. At iQtechway you will get fully customizable advertising strategy according to your need, company, and product. We are one of the leading service providers in this field with a history of 200+ successful projects and on time delivery expertise.</p>
 
 
             <p>Our Company dedicates their time to your growth and business. We know all type of social media marketing management including facebook, google+, Instagram, twitter etc. Earlier we used to find all these differently now, we have a sole level over here.</p>
 
-            <p>IQ Techway has an experience of handling 100+ project and Our Company is one of the top 10 IT companies, even though IQ Techway is one of the top 10+ Social Media Marketing Companies</p>
+            <p>iQtechway has an experience of handling 100+ project and Our Company is one of the top 10 IT companies, even though iQtechway is one of the top 10+ Social Media Marketing Companies</p>
 
            
 
@@ -658,9 +661,9 @@
             <h2>Guaranteed SEO Results 100% Reputed as the <span>Best Tamilnadu SEO Company</span> </h2>
             <p>Top Page Organic Listing or earned Media Drives Traffic and Inspires Trust & Confidence among consumers
                 highlighting the importance the company has gained through popular merit</p>
-            <p>We at IQ Techway, the leading provider of SEO Services in Tamilnadu believe - SEO is the understanding of
+            <p>We at iQtechway, the leading provider of SEO Services in Tamilnadu believe - SEO is the understanding of
                 search engine technology, our SEO experts study search patterns by people and clearly define the target
-                audience and their search terms. IQ Techway SEO specialists provide the following services:</p>
+                audience and their search terms. iQtechway SEO specialists provide the following services:</p>
 
             <div class="guaranteed-list">
                 <ul>
@@ -902,11 +905,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                    <span> Why choose iQtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
+                    iQtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
