--- a/IOS-Mobile-Application-Development.html
+++ b/IOS-Mobile-Application-Development.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best iOS Application Development Company in India, Top iPhone App Development Services - IQ Techway </title>
+    <title>IOS Application Development company in Coimbatore - Mobile application company in coimbatore - IOS Application Developers in Coimbatore</title>
+
+    <meta name="description" content="Looking for an IOS Development company in Coimbatore? IQ Techway offers Native IOS development in Object C and Swift. Contact us for your IOS development needs.">
 
     <!--////////////////////// Favicon /////////////////// -->
     <link rel="icon" href="assets/Images/logo/iq-fav.png">
@@ -75,7 +77,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -101,7 +103,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -197,7 +199,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -267,7 +270,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -298,7 +301,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -324,7 +327,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -462,7 +465,7 @@
 
     <div class="research-title mb-5">
         <h2>iOS App <span>development service</span> </h2>
-        <p>At IQ Techway, we are the architects of cutting-edge iOS applications that redefine user experiences. As a pioneering app development company, we fuse creativity with technology to deliver bespoke solutions tailored to our clients' needs.</p>
+        <p>At iQtechway, we are the architects of cutting-edge iOS applications that redefine user experiences. As a pioneering app development company, we fuse creativity with technology to deliver bespoke solutions tailored to our clients' needs.</p>
     </div>
 
 
@@ -481,11 +484,11 @@
                         iOS and iPhone application development</a> is something that organizations simply cannot afford
                     to ignore.</p>
                 <p>
-                    <a href="#">IQ Techway , an iOS application development company in India</a> not only develops apps
+                    <a href="#">iQtechway , an iOS application development company in India</a> not only develops apps
                     for
                     iOS but also makes them available on App Store, a dedicated apps hub.
                 </p>
-                <p><a href="#">IQ Techway </a> offers a range of <a href="#">iOS application development</a> options.
+                <p><a href="#">iQtechway </a> offers a range of <a href="#">iOS application development</a> options.
                     Moreover, our apps are device targeted which means enhanced features for iPad, iPhone, Apple TV, and
                     Apple Watch. Our certified and highly experienced developers build apps that boost productivity and
                     efficiency and help improve sales and growth. Some of our <a href="#">iOS app development </a>
@@ -493,9 +496,9 @@
 
                 <!-- <h2>iOS App  <span>Consulting –</span></h2>
 
-                <p>Are your communication and business services based on the iOS platform? Are you seeking apps/tools to help you energize your business using various iOS devices? Yes! Then <a href="#">IQ Techway </a> is your one-stop hub. Our <a href="#">Mobile App development</a>  consultation is focused primarily on business efficiency. Our business-centric apps are popular, highly downloaded, and fetch respect in terms of functionality and user experience.</p> -->
+                <p>Are your communication and business services based on the iOS platform? Are you seeking apps/tools to help you energize your business using various iOS devices? Yes! Then <a href="#">iQtechway </a> is your one-stop hub. Our <a href="#">Mobile App development</a>  consultation is focused primarily on business efficiency. Our business-centric apps are popular, highly downloaded, and fetch respect in terms of functionality and user experience.</p> -->
 
-                <h2>The IQ Techway Advantage - <span>Best iOS application Development Company in India</span></h2>
+                <h2>The iQtechway Advantage - <span>Best iOS application Development Company in India</span></h2>
 
                 <p>Full-service <a href="#"> Mobile App Development Company.</a><br>
                     Pixel <a href="#"> perfect UI</a> which works like a charm and looks stunning too. <br>
@@ -642,9 +645,9 @@
                 medium, and large organizations. No wonder then we are called the <a href="#">"Best IOS application
                     development company in India”.</a> </p>
 
-            <h2>The IQ Techway <span> Process Flow -</span></h2>
+            <h2>The iQtechway <span> Process Flow -</span></h2>
             <p>Every <a href="#">iOS app development service provider</a> worth its salt follows a standard development
-                process. However,<a href="#">IQ Techway </a> goes a step further and offers a bouquet of design mockups.
+                process. However,<a href="#">iQtechway </a> goes a step further and offers a bouquet of design mockups.
                 What does this mean for you as a customer; a sense of satisfaction, of owing an app which resonates with
                 your business ethos and complements your brand attributes. It is only when the mockup is approved do we
                 migrate to the coding part. Our <a href="#">app life cycle</a> process is distinct and demanding -
@@ -679,7 +682,7 @@
                 is this infrastructure that makes us the best <a href="#">iPhone app development company in India.</a>
             </p>
 
-            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>IQ Techway </a> , an
+            <p>Connect with us for a range of consumer and enterprise applications. <a href="#"></a>iQtechway </a> , an
                 <a href="#">iOS app development company in India</a> caters to a plethora of demands and app flavors,
                 and dimensions, irrespective of industry verticals or end-use.
             </p>
@@ -709,7 +712,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>GREAT PROSPECTS FOR MODERNIZATION</h5>
-                    <p>With IQ Techway research & development services, you will be able to test your innovative
+                    <p>With iQtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -911,11 +914,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                    <span> Why choose iQtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
+                    iQtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
