--- a/crm-development.html
+++ b/crm-development.html
@@ -74,7 +74,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -100,7 +101,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -195,7 +196,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -265,7 +267,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -296,7 +298,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -322,7 +325,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -472,7 +475,7 @@
         <div class="our-solutions-container container">
             <div class="our-solutions-content">
                 <h2>Experience innovation with <span>IQ Tech</span> </h2>
-                <p>Looking for CRM software solutions? IQ Tech is the top rated CRM software solutions company offering
+                <p>Looking for CRM software solutions? iQtechway is the top rated CRM software solutions company offering
                     world class CRM services to businesses of every size from small startups to big enterprises. Our <a
                         href="#">CRM software development</a> solutions enable businesses to stay connected with
                     customers as well as document every interaction effectively.
@@ -656,7 +659,7 @@
                         <img src="assets/Images/common2/icon-1.png" alt="software-development">
                     </div>
                     <h5>CRM Experts Team</h5>
-                    <p>At IQ Tech we have a highly dedicated CRM experts team who have full expertise in latest
+                    <p>At iQtechway we have a highly dedicated CRM experts team who have full expertise in latest
                         technologies and tools as well as understands your business vision and work on the challenges of
                         the project to fulfill your project requirements</p>
 
@@ -668,7 +671,7 @@
                     </div>
                     <h5>Staff Augmentation</h5>
                     <p>If you need additional resources for your CRM software solutions project to enhance the
-                        productivity, Get a highly experienced CRM developers team from IQ Tech at the best rates.</p>
+                        productivity, Get a highly experienced CRM developers team from iQtechway at the best rates.</p>
                     <div class="homeServices-overlay"></div>
 
                 </div>
@@ -771,7 +774,7 @@
                 <div class="research-content-boxs">
                     <h5>IMPROVED CUSTOMER RETENTION
                     </h5>
-                    <p>With IQ Techway research & development services, you will be able to test your innovative
+                    <p>With iQtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
