--- a/enterprise-mobility.html
+++ b/enterprise-mobility.html
@@ -183,7 +183,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -209,7 +210,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -305,7 +306,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -372,7 +374,7 @@
                                 <li><a class="dropdown-item" href="hire-wordpress-developer.html">Hire Wordpress Developer</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -403,7 +405,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -429,7 +432,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -839,7 +842,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose Iq <span>Techway</span></h2>
-                <p>At IQ Techway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
+                <p>At iQtechway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
