--- a/hire-flutter-developer.html
+++ b/hire-flutter-developer.html
@@ -75,7 +75,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -101,7 +102,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -197,7 +198,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -267,7 +269,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -298,7 +300,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -324,7 +327,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -459,7 +462,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Flutter <span>Developers</span> </h2>
-        <p>At IQ Techway, we're committed to delivering top-tier Flutter development services that transcend the ordinary.</p>
+        <p>At iQtechway, we're committed to delivering top-tier Flutter development services that transcend the ordinary.</p>
     </div>
 
 
@@ -482,7 +485,7 @@
                 <p>When you hire Flutter developers in India from IQ Tech, you get total control over agile experts
                     while we handle onboarding, infrastructure, administrative, legal, and project support.</p>
 
-                <p> Hire Flutter App developers for Start-up from IQ Tech to harness the benefits of this increasingly
+                <p> Hire Flutter App developers for Start-up from iQtechway to harness the benefits of this increasingly
                     popular platform and achieve the unimaginable.</p>
 
                 <h2>Hire Us For Your <span>Flutter Developers</span> On</h2>
@@ -716,7 +719,7 @@
         <div class="Development-container container">
             <div class="Development-title">
                 <h2>Why Hire <span>Flutter Developers India </span>From IQ Tech? </h2>
-                <p>IQ Tech provides credible, skilled remote Flutter developers to boost your company’s growth and ROI.
+                <p>iQtechway provides credible, skilled remote Flutter developers to boost your company’s growth and ROI.
                     We are a reputable flutter app development company in India that is aware of current trends and
                     technologies. We strive to create a smooth flutter application for organizing ass sizes and shapes.
                 </p>
