--- a/hire-logo-designers.html
+++ b/hire-logo-designers.html
@@ -74,7 +74,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -100,7 +101,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -196,7 +197,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -266,7 +268,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -297,7 +299,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -323,7 +326,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -441,7 +444,7 @@
         <div class="banner-section">
             <span class="since">Since 2019</span>
             <h1>Hire <span>Logo Designer</span></h1>
-            <p>Logo designs at IQ Tech depict aesthetic logos that portray your brand identity, while appending value to
+            <p>Logo designs at iQtechway depict aesthetic logos that portray your brand identity, while appending value to
                 it.
             </p>
             <span class="del"><a href="index.html">Home </a> > Hire
@@ -470,7 +473,7 @@
             <div class="our-solutions-content">
                 <p>We cannot deny the pivotal role a logo plays in shaping your brand’s success. Your business deserves
                     a logo that not only represents you but also declares your superiority in the market. Hire a logo
-                    designer from IQ Tech ensures a distinctive and sophisticated logo – a dynamic way to engage with
+                    designer from iQtechway ensures a distinctive and sophisticated logo – a dynamic way to engage with
                     your audience and unlock increased business opportunities</p>
 
                 <p>At IQ Tech, we understand the role a logo plays in your brand success and that’s why we have stepped
@@ -650,7 +653,7 @@
                     </div>
                     <h5>Logos Designed by us are of Professional Grade</h5>
                     <p>Having the logo of professional grade is just like having the world in your hand. Logo designers
-                        at IQ Tech make sure that they deliver you with professional grade logos that look class,
+                        at iQtechway make sure that they deliver you with professional grade logos that look class,
                         compact, and suit your brand the most. </p>
 
                     <div class="homeServices-overlay"></div>
@@ -661,7 +664,7 @@
                     </div>
                     <h5>We Never Copy Ideas, We Stick to Something Unique</h5>
                     <p>Almost 95% of the websites and brands have logos and within this percentage, there are fair
-                        chances that the logo design resembles to some. But with IQ Tech you will get the assurance of
+                        chances that the logo design resembles to some. But with iQtechway you will get the assurance of
                         100% unique idea.</p>
                     <div class="homeServices-overlay"></div>
 
@@ -671,7 +674,7 @@
                         <img src="assets/Images/Hire-flutter/3.png" alt="website-development">
                     </div>
                     <h5>Your Satisfaction is Our Satisfaction</h5>
-                    <p>Till the time you are not satisfied, IQ Tech is not satisfied. We look for our satisfaction in
+                    <p>Till the time you are not satisfied, iQtechway is not satisfied. We look for our satisfaction in
                         you and that is a reason why we put our head to toe efforts while designing a logo for you. </p>
                     <div class="homeServices-overlay"></div>
 
@@ -680,7 +683,7 @@
                     <div class="homeServices-icon">
                         <img src="assets/Images/Hire-flutter/4.png" alt="software-development">
                     </div>
-                    <h5>IQ Tech Renders Round-the-go Customer Support</h5>
+                    <h5>iQtechway Renders Round-the-go Customer Support</h5>
                     <p>After sales service or customer support is something you can need at anytime, and we are readily
                         available whenever you need us. We have specialized support teams that are equipped with
                         advanced tools to help you with any type of complexities.</p>
@@ -704,9 +707,9 @@
 
         <div class="Development-container container">
             <div class="Development-title">
-                <h2>Getting a quintessential logo is now <span>easier with IQ Tech </span></h2>
+                <h2>Getting a quintessential logo is now <span>easier with iQtechway </span></h2>
                 <p>We have made the hiring process for a logo designer really easier and commodious. You do not have to
-                    exhaust yourself into the pool of graphic designers by visiting multiple sites. Instead, IQ Tech is
+                    exhaust yourself into the pool of graphic designers by visiting multiple sites. Instead, iQtechway is
                     an ingenuity solution that can satisfy your logo designing requirements within your budget limit.
                 </p>
             </div>
@@ -716,7 +719,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Choose the Ideal Plan</h5>
-                    <p>IQ Tech has a fleet of plans when it comes to logo designing. From basic to advance and premium,
+                    <p>iQtechway has a fleet of plans when it comes to logo designing. From basic to advance and premium,
                         we have an option for everyone to comply with the budget. You can select the best suited plan
                         for your business while getting details about these plans from our expert panel.</p>
                 </div>
@@ -726,14 +729,14 @@
                     </div>
                     <h5>Disclose Your Requirements</h5>
                     <p>What you need, is what we deliver! After the selection of plan, our team listens to your needs
-                        and amalgamates them with the plan. IQ Tech delivers you with a list of questionnaire so that we
+                        and amalgamates them with the plan. iQtechway delivers you with a list of questionnaire so that we
                         can get a better understanding of the virtual image of the logo you are thinking.</p>
                 </div>
                 <div class="Development-boxs">
                     <div class="Development-icon">
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
-                    <h5>IQ Tech Overviews the Concept</h5>
+                    <h5>iQtechway Overviews the Concept</h5>
                     <p>As per the requirements assigned by you, we overview the concept and design a prototype logo in
                         order to seek your feedback. Once the prototype is ready, our experts come over to you for the
                         transformations you need to make.</p>
