--- a/hire-seo-expert.html
+++ b/hire-seo-expert.html
@@ -75,7 +75,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -101,7 +102,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -197,7 +198,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -267,7 +269,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -298,7 +300,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -324,7 +327,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -461,7 +464,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Best <span>SEO Experts</span> </h2>
-        <p>At IQ Techway, we're more than just a digital marketing agency – we're your trusted partners in unlocking the full potential of your online presence.</p>
+        <p>At iQtechway, we're more than just a digital marketing agency – we're your trusted partners in unlocking the full potential of your online presence.</p>
     </div>
 
 
@@ -481,7 +484,7 @@
                     knows your business, who knows how to take the flow of things in your favor, and how to enhance your
                     ROI.</p>
 
-                <p>There is no one better than IQ Tech who determines your needs and delivers you with best-in-class SEO
+                <p>There is no one better than iQtechway who determines your needs and delivers you with best-in-class SEO
                     services without burning a hole in your pocket. Our effective and proven SEO strategies can assist
                     you in achieving more business prospects and a reputed brand image. All you have to do is hire SEO
                     Executives from India at IQ Tech, and we will take care of everything.
@@ -634,7 +637,7 @@
         <div class="homeServices-container container">
 
             <div class="homeServices-title">
-                <h2>The Fluid Process IQ Tech Follows To <span>Optimize Your Website</span></h2>
+                <h2>The Fluid Process iQtechway Follows To <span>Optimize Your Website</span></h2>
                 <p>We chase an approach and work in accordance with our plan that is specifically designed for your
                     business. From driving in more traffic to optimized landing page- everything is followed as per the
                     protocol for attaining a highly optimized and SEO friendly website.</p>
@@ -645,7 +648,7 @@
                         <img src="assets/Images/Hire-flutter/1.png" alt="software-development">
                     </div>
                     <h5>In-depth SEO Analysis</h5>
-                    <p>We believe in starting from scratch in order to benefit you the most. Experts at IQ Tech analyze
+                    <p>We believe in starting from scratch in order to benefit you the most. Experts at iQtechway analyze
                         your website to know the exact SER and SEO of your website. This will help you with a better
                         detail and the comprehensive errors that are the reason behind the poor performance of your
                         online business or website.</p>
@@ -657,7 +660,7 @@
                         <img src="assets/Images/Hire-flutter/2.png" alt="mobile-app">
                     </div>
                     <h5>Thorough Competitive Analysis</h5>
-                    <p>Knowing what your business contraries are doing is just like wining the half game. IQ Tech digs
+                    <p>Knowing what your business contraries are doing is just like wining the half game. iQtechway digs
                         out the strategies your business competitors are using; while a report of their SEO ranks so as
                         to take you at top while leaving them behind.</p>
                     <div class="homeServices-overlay"></div>
@@ -694,7 +697,7 @@
                     <h5>Appropriate Link Building</h5>
                     <p>We ever stop until the maximum for you is achieved. The next step we follow is link building with
                         other websites that point towards your business and the chances of getting more customers
-                        increase. IQ Tech doesn’t follow approaches based on the count of back-links. Instead we go for
+                        increase. iQtechway doesn’t follow approaches based on the count of back-links. Instead we go for
                         authentic and impactful back-link to make your only portal a leading one.</p>
                     <div class="homeServices-overlay"></div>
 
@@ -727,7 +730,7 @@
 
         <div class="Development-container container">
             <div class="Development-title">
-                <h2>Perks Of Getting Freelance <span>SEO Executives India- </span> At IQ Tech </h2>
+                <h2>Perks Of Getting Freelance <span>SEO Executives India- </span> At iQtechway </h2>
                 <p>There is a humongous list of advantages we can offer in our SEO package, and it is guaranteed to take
                     your business on new heights -either in the terms of business success or enhanced ROI. In short, IQ
                     Tech skyrockets your SER rankings and that is all you need to get in the customers and making more
@@ -756,7 +759,7 @@
                         <i class="fa-solid fa-check fa-2xl"></i>
                     </div>
                     <h5>Superb Search Engine Results</h5>
-                    <p>Here comes the most imperative part of search engine optimization- the SER. IQ Tech has
+                    <p>Here comes the most imperative part of search engine optimization- the SER. iQtechway has
                         impeccable experience when it comes to elevating your search engine results. We improve your
                         ranking from the very first day and make sure that your business acquires a recognizable
                         position on the search engines.</p>
