--- a/joomla.html
+++ b/joomla.html
@@ -75,7 +75,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -101,7 +102,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -197,7 +198,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -264,7 +266,7 @@
                                 <li><a class="dropdown-item" href="hire-wordpress-developer.html">Hire Wordpress Developer</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -295,7 +297,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -321,7 +324,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -627,7 +630,7 @@
         <div class="homeServices-container container">
 
             <div class="homeServices-title">
-                <h2>IQ Techway your <span>Joomla Development Partner </span></h2>
+                <h2>iQtechway your <span>Joomla Development Partner </span></h2>
                 <p>Enlist teams of world-class developers, consultants, project managers and analysts who together render your vision in the physical world. With a deep focus on developing secure, highly-responsive and unique web solutions combined with a 100% success rate amongst clients spread across the globe, ensure the achievement of business objectives and digital success for your Joomla development initiative</p>
             </div>
             <div class="homeSrvices-content">
@@ -747,7 +750,7 @@
                 </div>
                 <div class="research-content-boxs">
                     <h5>Multilingual Support</h5>
-                    <p>With IQ Techway research & development services, you will be able to test your innovative
+                    <p>With iQtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
