--- a/logo-and-brand-indentity.html
+++ b/logo-and-brand-indentity.html
@@ -74,7 +74,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -100,7 +101,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -196,7 +197,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -263,7 +265,7 @@
                                 <li><a class="dropdown-item" href="hire-wordpress-developer.html">Hire Wordpress Developer</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -294,7 +296,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -320,7 +323,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -456,7 +459,7 @@
 
     <div class="research-title mb-5">
         <h2> LOGO & BRANDING <span>Identity Service</span> </h2>
-        <p>At IQ Techway, we pioneer cutting-edge solutions to elevate intelligence through innovative technology. Our identity rests upon a commitment to pushing the boundaries of possibility, driving transformation, and enabling businesses to thrive in an ever-evolving digital landscape.</p>
+        <p>At iQtechway, we pioneer cutting-edge solutions to elevate intelligence through innovative technology. Our identity rests upon a commitment to pushing the boundaries of possibility, driving transformation, and enabling businesses to thrive in an ever-evolving digital landscape.</p>
     </div>
 
 
@@ -796,7 +799,7 @@
                 <div class="research-content-boxs">
                     <h5>FORMATION OF A LIST OF SPECIFICATIONS
                     </h5>
-                    <p>With IQ Techway research & development services, you will be able to test your innovative
+                    <p>With iQtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
