--- a/pay-per-click.html
+++ b/pay-per-click.html
@@ -72,7 +72,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -98,7 +99,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -194,7 +195,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -264,7 +266,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -295,7 +297,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -321,7 +324,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -439,7 +442,7 @@
         <div class="banner-section">
             <span class="since">Since 2019</span>
             <h1 class="mb-3"><span>Pay Per Click </span> In India</h1>
-            <p class="mb-3">Within a short span of 10+ years, IQ Tech has emerged as one of the topmost authentic
+            <p class="mb-3">Within a short span of 10+ years, iQtechway has emerged as one of the topmost authentic
                 SEO SERVICES Development Companies in the world delivering solid groundbreaking solutions & services.
             </p>
             <img src="assets/Images/testimonial/client-img.png" alt="Banner-testimonial">
@@ -454,7 +457,7 @@
 
     <div class="research-title mb-5">
         <h2>Pay Per Click <span> Company</span> </h2>
-        <p>At IQ Techway, we understand the dynamic landscape of digital advertising. With a team of seasoned experts well-versed in the intricacies of PPC, we're dedicated to propelling your business forward by leveraging the power of targeted advertising campaigns.</p>
+        <p>At iQtechway, we understand the dynamic landscape of digital advertising. With a team of seasoned experts well-versed in the intricacies of PPC, we're dedicated to propelling your business forward by leveraging the power of targeted advertising campaigns.</p>
     </div>
 
     <section class="our-solutions-section ">
@@ -463,7 +466,7 @@
         <div class="our-solutions-container container">
             <div class="our-solutions-content">
                 <h2>Our Pay Per Click <span>Services</span> </h2>
-                <p>IQ Techway, being a prominent Digital Marketing Company in Delhi deploys PPC Model as per the
+                <p>iQtechway, being a prominent Digital Marketing Company in Delhi deploys PPC Model as per the
                     requirement of the brand and clients’ demands. This is one of the most efficient tools that can
                     generate traffic and let a brand get recognition instantly. Pay Per Click is an efficient Digital
                     Marketing Technique that helps our clients to achieve their customers online by paid search
@@ -1290,11 +1293,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                    <span> Why choose iQtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
+                    iQtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
