--- a/php.html
+++ b/php.html
@@ -75,7 +75,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -101,7 +102,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -197,7 +198,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -267,7 +269,7 @@
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -298,7 +300,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -324,7 +327,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -463,7 +466,7 @@
 
     <div class="research-title mb-5">
         <h2>PHP <span>Development</span> </h2>
-        <p>At IQ Techway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
+        <p>At iQtechway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
     </div>
 
 
@@ -473,16 +476,16 @@
         <div class="our-solutions-container container">
             <div class="our-solutions-content">
 
-                <p>Welcome to IQ Techway, your premier destination for professional PHP development services. We are a
+                <p>Welcome to iQtechway, your premier destination for professional PHP development services. We are a
                     team of dedicated and experienced PHP developers committed to delivering innovative, scalable, and
                     high-performance solutions tailored to meet your unique business needs.</p>
 
-                <p>At IQ Techway, we harness the power of PHP, a versatile and robust scripting language, to build
+                <p>At iQtechway, we harness the power of PHP, a versatile and robust scripting language, to build
                     dynamic, secure, and feature-rich web applications. With our in-depth understanding of PHP
                     frameworks like Laravel, Symfony, CodeIgniter, and more, we craft customized solutions that propel
                     your business forward in the digital landscape.</p>
 
-                <h2>Why Choose IQ Techway for <span>PHP Development Services?</span> </h2>
+                <h2>Why Choose iQtechway for <span>PHP Development Services?</span> </h2>
                 <p>Expertise: Our team comprises proficient PHP developers with a wealth of experience in crafting
                     cutting-edge solutions using the latest PHP technologies and frameworks.</p>
                 <p>Custom Solutions: We understand that every business has unique requirements. That's why we focus on
@@ -733,7 +736,7 @@
 
     <div class="research-title mb-5">
         <h2>PHP Backend <span>Service</span> </h2>
-        <p>At IQ Techway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
+        <p>At iQtechway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
     </div>
 
 
@@ -759,7 +762,7 @@
                 <div class="research-content-boxs">
                     <h5>HIGH-QUALITY CODE
                     </h5>
-                    <p>With IQ Techway research & development services, you will be able to test your innovative
+                    <p>With iQtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -1068,11 +1071,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                    <span> Why choose iQtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
+                    iQtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
