--- a/typeScript.html
+++ b/typeScript.html
@@ -73,7 +73,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -99,7 +100,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -195,7 +196,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <a href="career.html" class="accordion-button collapsed">Career</a>
+                                                <a href="join-team.html" class="accordion-button collapsed">Career</a>
+
 
                     </div>
 
@@ -262,7 +264,7 @@
                                 <li><a class="dropdown-item" href="hire-wordpress-developer.html">Hire Wordpress Developer</a></li>
                             </ul>
                         </div>
-                        <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
+                        <a href="join-team.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
                                     class="fa-solid fa-person-walking-dashed-line-arrow-right fa-xl"></i>
                                 <span>Career</span></button></a><br>
                         <a href="blog.html"><button class="load-btn7" id="fans" onmouseover="function7()"><i
@@ -293,7 +295,8 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Mobile Development</h5>
                                 <ul>
-                                    <li><a href="ios-app.html">iOS App</a></li>
+                                    <li><a href="IOS-Mobile-Application-Development.html">iOS App</a></li>
+
                                     <li><a href="android-app.html">Android App</a></li>
                                     <li><a href="react-native.html">React Native</a></li>
                                     <li><a href="flutter-app.html">Flutter</a></li>
@@ -319,7 +322,7 @@
                             <div class=" load-calculate-boxs">
                                 <h5>Online Marketing</h5>
                                 <ul>
-                                    <li><a href="seo.html">SEO Services</a></li>
+                                    <li><a href="seo.html">Search Engine Optimization</a></li>
                                     <li><a href="search-engine-marketing.html">Search Engine Marketing</a></li>
                                     <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
                                     <li><a href="pay-per-click.html">Pay Per Click Management</a></li>
@@ -454,7 +457,7 @@
 
     <div class="research-title mb-5">
         <h2>Typescript-get your digital  <span>solution</span> </h2>
-        <p>At IQ Techway, we pride ourselves on being a dynamic force in the realm of digital solutions. With a relentless commitment to innovation and excellence, we stand at the forefront of technological advancement, offering cutting-edge solutions tailored to meet the diverse needs of modern businesses.</p>
+        <p>At iQtechway, we pride ourselves on being a dynamic force in the realm of digital solutions. With a relentless commitment to innovation and excellence, we stand at the forefront of technological advancement, offering cutting-edge solutions tailored to meet the diverse needs of modern businesses.</p>
     </div>
 
     
@@ -774,7 +777,7 @@
                 <div class="research-content-boxs">
                     <h5>CODE STABILITY
                     </h5>
-                    <p>With IQ Techway research & development services, you will be able to test your innovative
+                    <p>With iQtechway research & development services, you will be able to test your innovative
                         business ideas in practice, turning them into new software solutions.</p>
                 </div>
                 <div class="research-content-boxs">
@@ -973,11 +976,11 @@
             </div>
             <div class="question">
                 <button id="button1">
-                    <span> Why choose IQ Tech for Android App Development? </span>
+                    <span> Why choose iQtechway for Android App Development? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
                 <p>
-                    IQ Tech is the leading Android App Development Company that cares about the clients and their
+                    iQtechway is the leading Android App Development Company that cares about the clients and their
                     experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
                     apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
                     utmost importance to us.</p>
